CSS: Z-Index fix for dialogs

--- a/LAD-Java/src/lad/files/game.css
+++ b/LAD-Java/src/lad/files/game.css
@@ -59,7 +59,7 @@ p.weaponSelector button {
     width: 100%;
     height: 100%;
     background-color: #121212;
-    z-index: 20302;
+    z-index: 200;
     color: #EFEFEF;
 }
 
